# OpsPulse

./: .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  OpsPulse - DDS.md  OpsPulseAI - SRS.md  Pathway docs.md  README.md  main.py  pyproject.toml  test_integration.py
Message_queue_kafka/: pathway_consumer.py  producer.py  requirements.txt
Rag/: README.md  __init__.py  __main__.py  chroma_rag_server.py  config.yaml  rag_integration.py  rag_pipeline.py  requirements.txt  server.py
Rag/chroma_db/: file_hashes.json
Rag/chroma_db/7073d9f2-359b-497c-83a3-24a7038a7ee2/: index_metadata.pickle
backend/: README.md  __init__.py  config.py  main.py  requirements.txt
backend/models/: __init__.py  analytics.py  logs.py  system.py  websocket.py
backend/routes/: __init__.py  analytics.py  logs.py  system.py  websocket.py
backend/services/: __init__.py  data_aggregator.py  health_checker.py  kafka_bridge.py  websocket_manager.py
deployment/: deploy_dashboard_vm.sh  deploy_logs_vm.sh  deploy_rag_vm.sh  deploy_single_vm.sh  gcp_setup.sh  opspulse-logs.service  setup_vm.sh
logs_generator/: README.md  __init__.py  __main__.py  anomalies.py  config.yaml  generator.py  models.py  output.py  requirements.txt  server.py  templates.py
output/: logs_20260103_010323_0.json  logs_20260103_012600_0.json
